attempt to fix play recording on mobile brwsrs

--- a/src/style.css
+++ b/src/style.css
@@ -198,7 +198,7 @@ body {
 }
 
 .middle {
-  height: 80%;
+  height: 75%;
 }
 
 .middle canvas {
